cluster/config/grafana/grafana-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
