cluster/config/grafana/grafana-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: grafana
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "grafana.kube.home"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
  - "grafana.kube.home"
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        host: grafana-service
        port:
          number: 3000
