cluster/config/grafana/grafana.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    app: grafana
    namespace: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "grafana"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        app: grafana
    spec:
      serviceAccountName: grafana
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:9.0.3
          imagePullPolicy: IfNotPresent
          args:
            - --config=/config/grafana/grafana.ini
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-data
            - mountPath: /config/grafana
              name: grafana-config
            - mountPath: /config/kube-cert
              name: kube-cert
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: kube-cert
          configMap:
            name: wildcard-kube-home-distribution
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: "true"
    hajimari.io/icon: chart-bar-stacked
    hajimari.io/appName: Grafana
    hajimari.io/group: Monitoring
spec:
  rules:
  - host: grafana.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
